# dbx-data-modeling

./: .databricksignore  .gitignore  PRD.md  README.md  databricks.yml  pyproject.toml
migrations/: alembic.ini  env.py
migrations/versions/: 0001_init.py  0002_chat_sessions.py
resources/: catalog.yml  lakebase.yml  volumes.yml
resources/apps/: modeler_app.yml
resources/jobs/: apply_ddl.yml  seed_lakebase.yml  synth_data_gen.yml  synth_new_data.yml
resources/pipelines/: silver_pipeline.yml
src/app/: app.yaml  apx.config.json  requirements.txt
src/app/agent/: graph.py  json_extract.py  local_dev.py  seed_dims.json
src/app/agent/alternatives/: README.md  option_b_responses_agent.py  option_c_agent_bricks.md  option_d_dspy.md
src/app/agent/prompts/: few_shot.md  system.md
src/app/agent/tools/: catalog_introspect.py  ddl_renderer.py  proposal_store.py  proposal_validator.py  reuse_scanner.py
src/app/backend/: auth.py  main.py  proposal_store.py
src/app/backend/routers/: agent.py  apply.py  catalog.py  proposals.py  sessions.py
src/app/frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
src/app/frontend/src/: main.js  main.tsx
src/app/frontend/src/api/: client.js  client.ts
src/apply/: apply_ddl.py  seed_lakebase.py
src/eval/: dataset.jsonl  run_eval.py  scorers.py
src/silver/: silver_pipeline.py
src/synth/: bronze_ingest.py  bronze_ingest_new.py  core_schema.py  extension_schema.py  generate_new_data.py  generate_to_volume.py
tests/unit/: test_ddl_renderer.py  test_designer_parse.py
(+68 files in other folders)
